# xrayutilities

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  CHANGES.txt  CONTRIBUTING.md  MANIFEST.in  README.md  README.txt  SConstruct  TODO.txt  appveyor.yml  azure-buildwheels.yml  azure-pipelines.yml  azure-testing.yml  meson.build  meson_options.txt  pyproject.toml  recommended_requirements.txt  release.txt  setup.py  tox.ini
.azure/: azure-builddocs.yml  azure-buildwheels.yml  azure-linting.yml  azure-testing.yml
.azure/templates/: testing_job.yml
doc/: README_sf.rst  README_sf.txt  SConscript  css.patch  webpage.patch  xrayutilities.info
doc/examples/: xrutils_angular2hkl_conversion.py  xrutils_ccd_parameter.py  xrutils_example_plot_3D_ESRF_ID01.py  xrutils_experiment_Powder_example_Iron.py  xrutils_experiment_angle_calculation.py  xrutils_experiment_kappa.py  xrutils_id01_functions.py  xrutils_io_cif_parser.py  xrutils_io_cif_parser_bi2te3.py  xrutils_materials_Alloy_contentcalc.py  xrutils_materials_components_of_the_structure_factor.py  xrutils_materials_define_material.py  xrutils_materials_reflection_strength.py  xrutils_peak_angles_beamtime.py  xrutils_polefigure.py  xrutils_read_panalytical.py  xrutils_read_spec.py  xrutils_user.conf
doc/manual/: .gitignore  SConscript  SConscriptBuild  xrayutilities.tex  xrutils.tex
doc/source/: conf.py  cxrayutilities.rst  example_xrutils_read_spec_easy.py  example_xu_ccd_parameter.py  example_xu_ccd_parameter_hkl.py  example_xu_linear_detector_parameters.py  example_xu_read_spec_easy.py  examples.rst  index.rst  modules.rst  simulations.rst  xrayutilities.analysis.rst  xrayutilities.io.rst  xrayutilities.materials.rst  xrayutilities.math.rst  xrayutilities.rst  xrayutilities.simpack.rst  xrutils.analysis.rst  xrutils.io.rst  xrutils.materials.rst  xrutils.math.rst  xrutils.rst
examples/: .gitignore  PXRDfromCIF.py  PXRDfromCIF_multi.py  PXRDfromCIF_powder.py  PXRDfromCIF_seperate.py  replace_xrutils.sh  simpack_powdermodel.py  simpack_xrd_AlGaAs.py  simpack_xrd_Darwin_AlGaAs.py  simpack_xrd_InAs_fitting.py  simpack_xrd_SiGe.py  simpack_xrd_SiGe111.py  simpack_xrd_SiGe_asymmmetric.py  simpack_xrd_SiGe_superlattice.py  simpack_xrd_dyn_AlGaAs.py  simpack_xrr_SiO2_Ru_CoFe_IrMn_Al2O3.py  simpack_xrr_diffuse.py  simpack_xrr_effectivedensityslicing.py  simpack_xrr_matrixmethod.py  xrayutilities_angular2hkl_conversion.py  xrayutilities_ccd_parameter.py  xrayutilities_components_of_the_structure_factor.py  xrayutilities_define_material.py  xrayutilities_energy_dependent_structure_factor.py  xrayutilities_example_plot_3D_ESRF_ID01.py  xrayutilities_experiment_Powder_example_Iron.py  xrayutilities_experiment_Powder_signal_calculation.py  xrayutilities_experiment_angle_calculation.py  xrayutilities_experiment_kappa.py  xrayutilities_export_data2vtk.py  xrayutilities_fuzzygridding.py  xrayutilities_hotpixelkill_variant.py  xrayutilities_id01_functions.py  xrayutilities_io_cif_parser.py  xrayutilities_io_cif_parser_bi2te3.py  xrayutilities_io_pdcif_plot.py  xrayutilities_kmap_example_ESRF.py  xrayutilities_linear_detector_parameters.py  xrayutilities_materials_Alloy_contentcalc.py  xrayutilities_math_fitting.py  (+28 more)
examples/cif/: Anna.cif  Fe.cif  FeNi3.cif  FeNi_fcc_newl.cif  FeNi_sol_phase.cif  Fe_Ni_sol.cif  Ni.cif
examples/cif_files/: Calcite.cif  bi2te3.cif
examples/data/: BaF2.cif  Calcite.cif  LaB6_d500_si_psd.xye.bz2  README.txt  Silicon.cif  bi2te3.cif  inas_layer_radial_002_004.ras.bz2  polefig_Ge113.xrdml.bz2  rsm_1.xrdml.bz2  rsm_2.xrdml.bz2  rsm_3.xrdml.bz2  rsm_4.xrdml.bz2  rsm_5.xrdml  rsm_5.xrdml.bz2  simpack_xrd_AlGaAs.xrdml  test.spec.bz2  xrr_data.txt
lib/xrayutilities/: __init__.py  config.py  exception.py  experiment.py  gridder.py  gridder2d.py  gridder3d.py  mpl_helper.py  normalize.py  q2ang_fit.py  utilities.py  utilities_noconf.py  xrayutilities_default.conf
python/xrayutilities/: __init__.py  config.py  experiment.py  gridder.py  libxrayutils.py  normalize.py  utilities_noconf.py  xrayutilities_default.conf  xrutils_default.conf
python/xrutils/: .gitignore  __init__.py  config.py  detector.py  exception.py  experiment.py  gridder.py  libxrayutils.py  normalize.py  utilities.py  utilities_noconf.py  xrutils_default.conf
site_scons/: site_init.py
src/: .gitignore  Makefile  SConscript  ang2q.c  ang2q.h  array_utils.c  array_utils.h  block_average.c  constants.h  cxrayutilities.c  detector.c  detector.h  file_io.c  gridder.c  gridder.h  gridder1d.c  gridder2d.c  gridder3d.c  gridder_utils.c  gridder_utils.h  hklcond.c  hxrd.c  io_bruker_ccd.c  io_bruker_ccd.h  libgrid.c  libgrid.h  meson.build  qconversion.c  qconversion.h  rot_matrix.c  rot_matrix.h  test_rotsense.c  test_rotspeed.c  vecmat3.c  vecmat3.h  xrayutilities.h  xrutils.h
test/: blockaverage_test.py  gridder_test.py  test_qconversion.py  test_qconversion_area.py
tests/: README.txt  __init__.py  test_HXRD.py  test_NonCOP.py  test_alloy_content_calc.py  test_amorphous.py  test_analysis_linecuts.py  test_area_calib.py  test_blockaverage.py  test_ccd_normalizer.py  test_database.py  test_examples.py  test_functions.py  test_fuzzygridder1d.py  test_fuzzygridder2d.py  test_fuzzygridder3d.py  test_getang.py  test_gridder1d.py  test_gridder2d.py  test_gridder2dlist.py  test_gridder3d.py  test_io_cbf.py  test_io_edf.py  test_io_esg.py  test_io_fastscan.py  test_io_fio.py  test_io_nja.py  test_io_nja_map.py  test_io_nja_tsk.py  test_io_numor.py  test_io_pdcif.py  test_io_perkinelmer.py  test_io_pilatus.py  test_io_rigaku.py  test_io_roperccd.py  test_io_spec.py  test_io_specalignmentlog.py  test_io_speclog.py  test_io_specsardana.py  test_io_tty.py  (+32 more)
tools/: ccd2vtk  disttar.py  edf2mlab  setup.py.extension_package_try  xretb.glade
xrayutilities/: __init__.py  config.py  exception.py  experiment.py  gridder.py  gridder2d.py  gridder3d.py  mpl_helper.py  normalize.py  powder.py  q2ang_fit.py  utilities.py  utilities_noconf.py  xrayutilities_default.conf
xrayutilities/analysis/: __init__.py  line_cuts.py  line_cuts3d.py  misc.py  (+1 more)
(+259 files in other folders)
