# src/meson.build
sources = files(
  'block_average.c',
  'cxrayutilities.c',
  'file_io.c',
  'gridder1d.c',
  'gridder2d.c',
  'gridder3d.c',
  'gridder_utils.c',
  'hklcond.c',
  'qconversion.c'
)

headers = files(
  'gridder.h',
  'gridder_utils.h',
  'qconversion.h',
  'xrayutilities.h'
)

# Make headers available for other parts of the project
install_headers(headers)
